--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "nertu",
   "version": "0.1.0",
+  "homepage": "https://Aditiwari7.github.io/NERTU_Demo",
   "private": true,
   "dependencies": {
     "@mui/icons-material": "^5.15.1",
@@ -18,6 +19,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -40,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
